src/objects/Public_search_history_tracking__c.object
<CustomObject>
    <fields>
        <fullName>Case_Displayed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Displayed</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Public_search_history_tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cred_Status_Date_Displayed__c</fullName>
        <label>Cred Status Date Displayed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cred_Status__c</fullName>
        <label>Cred Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <label>License Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Number__c</fullName>
        <label>NPI Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Displayed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Displayed</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Public_search_history_tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Search_Date_and_Time__c</fullName>
        <label>Search Date and Time</label>
        <type>DateTime</type>
    </fields>
    <label>Public Search History Tracking</label>
    <nameField>
        <displayFormat>PSH-{00000}</displayFormat>
        <label>Public search history tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Public Search History Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>